--- a/css/font.css
+++ b/css/font.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 @import url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEduPowerExtraBoldA.woff');
+@import url('https://fonts.googleapis.com/css?family=Russo+One');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @font-face {
     font-family: 'bitbit';
@@ -12,5 +14,3 @@
     font-weight: 700;
     font-style: normal;
 }
-
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
