--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -12,6 +12,66 @@
     align-items: center;
 }
 
+.box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 1650px;
+    height: 800px;
+    border: 1px solid #a6c1ee;
+}
+
+/* .box02 {
+    width: 500px;
+    height: 500px;
+} */
+
+svg {
+    font-family: 'Russo One', sans-serif;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+svg text {
+    text-transform: uppercase;
+    animation: stroke 5s infinite alternate;
+    stroke-width: 2;
+    stroke: #365fa0;
+    font-size: 120px;
+}
+
+@keyframes stroke {
+    0% {
+        fill: rgba(72, 138, 20, 0);
+        stroke: #a6c1ee;
+        stroke-dashoffset: 25%;
+        stroke-dasharray: 0 50%;
+        stroke-width: 2;
+    }
+
+    70% {
+        fill: rgba(72, 138, 20, 0);
+        stroke: #a6c1ee;
+    }
+
+    80% {
+        fill: rgba(72, 138, 20, 0);
+        stroke: #a6c1ee;
+        stroke-width: 3;
+    }
+
+    100% {
+        fill: #a6c1ee;
+        stroke: rgba(54, 95, 160, 0);
+        stroke-dashoffset: -25%;
+        stroke-dasharray: 50% 0;
+        stroke-width: 0;
+    }
+}
+
+
 .inner::after {
     content: "";
     position: absolute;
@@ -30,21 +90,40 @@
     background: #f9f9f9; */
 }
 
+
 .item .mokup img {
-    margin: 100px 0 0 100px;
-    width: 700px;
+    margin: 40px 0 0 100px;
+    width: 900px;
 }
 
+
+.b_right .desc {
+
+    position: absolute;
+    inset: 35% auto auto 60%;
+    width: 100%;
+}
+
+.b_right .desc h3 {
+    font-size: 30px;
+    margin: 0 0 50px 0;
+}
+
+.b_right .desc dt {
+    float: left;
+    margin: 0 50px 0 0;
+    width: 50px;
+}
 
 
 
 .slogan {
-    font-family: 'TheJamsil5Bold';
-    font-size: 30px;
+    font-size: 14px;
+    margin: 300px 0 0 0;
+    font-family: 'Barlow', sans-serif;
 }
 
 .section .content {
-    background: tomato;
     transform: translate(-300px, 0);
     opacity: 0;
     height: 600px;
@@ -168,12 +247,13 @@
 
 .mopen {
     position: fixed;
-    inset: 50px 50px auto auto;
-    z-index: 9999;
+    inset: 65px 50px auto auto;
+    z-index: 999;
 
-    width: 30px;
-    height: 30px;
-    background: #f9f9f9;
+    width: 15px;
+    height: 35px;
+    cursor: pointer;
+
 }
 
 .mopen::before,
@@ -181,7 +261,8 @@
     content: "";
     position: absolute;
     background: #333;
-    height: 2px;
+    height: 5px;
+    border-radius: 50%;
 }
 
 .mopen::before {
@@ -208,7 +289,8 @@
     inset: 50% 5px auto 5px;
     transform: translate(0, -50%);
     background: #333;
-    height: 2px;
+    height: 5px;
+    border-radius: 50%;
     transition: 0.5s;
 }
 
@@ -221,13 +303,17 @@
 
 
 .mopen.on button::before {
-    transform: translate(0, -50%) rotate(45deg);
+    border-radius: 0;
+    width: 30px;
+    transform: translate(-50%, -150%) rotate(45deg);
     transition: 0.5s;
-
+    cursor: pointer;
 }
 
 .mopen.on button::after {
-    transform: translate(0, -50%) rotate(-45deg);
+    border-radius: 0;
+    width: 30px;
+    transform: translate(-50%, -150%) rotate(-45deg);
     transition: 0.5s;
-
+    cursor: pointer;
 }
