--- a/css/reset.css
+++ b/css/reset.css
@@ -24,7 +24,7 @@ address {
 
 body {
     line-height: 1;
-    font-family: 'GangwonEduPowerExtraBoldA', 'Noto Sans KR', sans-serif;
+    font-family: 'GangwonEduPowerExtraBoldA', 'Noto Sans KR', 'Roboto', sans-serif;
     color: #333;
     overflow-x: hidden
 }
